# global-hazard-intel-by-brian-gill

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.js  index.html  style.css
docs/: architecture.md  roadmap.md
research/: README.md  paper.tex  references.bib
src/global_hazard_intel/: cli.py  config.py  desktop_app.py  main.py  reporting.py
src/global_hazard_intel/api/routes/: hazards.py
src/global_hazard_intel/connectors/: air_quality.py  geocoding.py  live_data.py  satellite.py  weather.py
src/global_hazard_intel/domain/: location.py  models.py  monitoring.py
src/global_hazard_intel/pipelines/: orchestrator.py
src/global_hazard_intel/services/: analytics.py  detection.py  fusion.py  ingestion.py  scoring.py
src/global_hazard_intel/storage/: repository.py
src/global_hazard_intel/utils/: logging.py
tests/: test_health.py
