[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-hazard-intel"
version = "0.1.0"
description = "Environmental hazard intelligence platform starter"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Brian Gill" }
]
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "matplotlib>=3.10.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
